kubernetes/apps/teleport/teleport/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teleport
  namespace: teleport
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - teleport.unscfleet.com
  rules:
    - backendRefs:
        - name: teleport
          port: 443
