kubernetes/apps/teleport/teleport/app/routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-teleport-cluster-http-gateway-route
  namespace: teleport
spec:
  parentRefs:
  - name: external
    namespace: kube-system
    sectionName: https
  hostnames: ["teleport.unscfleet.com"]
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: custom-teleport-cluster-gateway-route
  namespace: teleport
spec:
  parentRefs:
  - name: external
    namespace: kube-system
    sectionName: https
  hostnames: ["teleport.unscfleet.com"]
  rules:
    - backendRefs:
      - name: teleport-cluster
        port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: custom-teleport-cluster-gateway-wild-route
  namespace: teleport
spec:
  parentRefs:
  - name: external
    namespace: kube-system
    sectionName: https
  hostnames: ["teleport.unscfleet.com","*.teleport.unscfleet.com"]
  rules:
    - backendRefs:
      - name: teleport-cluster
        port: 443
