kubernetes/apps/teleport/teleport/app/tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: TLSRoute
metadata:
  name: teleport
  namespace: security
spec:
  parentRefs:
  - name: external-gateway
    namespace: kube-system
  rules:
  - matches:
    - sni:
      - "teleport.unscfleet.com"
      - "*.teleport.unscfleet.com"
  - backendRefs:
    - name: teleport
      port: 443
